@@ -1,6 +1,11 @@
 2009-02-12  Dan Williams  <dcbw@redhat.com>
 
 	* icons/
+		- Fix fallout from icon move; install icons to the right directories
+
+2009-02-12  Dan Williams  <dcbw@redhat.com>
+
+	* icons/
 		- Reorganize icons into directories for each size, and replace
 			nm-no-connection and nm-device-wired icons with less-ugly
 			ones from the Gnome icon theme (network-idle and
